--- a/.github/workflows/autoscan.yml
+++ b/.github/workflows/autoscan.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu - latest
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions / checkout@v2
+      - uses: actions/checkout@v2
       - name: Set up JDK 11
-        uses: actions /setup - java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: '11.x' # The JDK version to make available on the path .
           java-package: jdk # (jre , jdk , or jdk +fx) - defaults to jdk
@@ -21,10 +21,10 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Run with Gradle
-        run: ./ gradlew bootrun &
+        run: ./gradlew bootrun &
       - name: ZAP Full Scan
-        uses: zaproxy / action -full - scan@v0 .2.0
+        uses: zaproxy/action-full-scan@v0.2.0
         with:
-          docker_name: 'owasp / zap2docker - stable '
-          target: 'http :// localhost :50080/ '
+          docker_name: 'owasp/zap2docker-stable'
+          target: 'http://localhost:50080/'
           cmd_options: '-a -d'
